syntax = "proto3";

package monitoreo;
option go_package = "proto/monitoreo;monitoreo";

service MonitoreoService {
    rpc ActualizarCliente (EstadoReserva) returns (ConfirmacionCliente);
    rpc StreamActualizaciones (stream EstadoReserva) returns (stream ConfirmacionCliente);
}

message EstadoReserva {
    string name = 1;
    string status = 2;
    string message = 3;
    string table_id = 4;
    int32 party_size = 5;
    string preferences = 6;
}

message ConfirmacionCliente {
    bool received = 1;
}
