syntax = "proto3";

package reserva;
option go_package = "proto/reserva;reserva";

service ReservaService {
    rpc EnviarSolicitud (SolicitudReserva) returns (ConfirmacionRecepcion);
    rpc ProcesarReservas (ListaSolicitudes) returns (ConfirmacionRecepcion);
}

message SolicitudReserva {
    string name = 1;
    string phone = 2;
    int32 party_size = 3;
    string preferences = 4;
}

message ListaSolicitudes {
    repeated SolicitudReserva solicitudes = 1;
}

message ConfirmacionRecepcion {
    bool success = 1;
    string message = 2;
}
